[gd_scene load_steps=2 format=3 uid="uid://dm5r7xql3w2p8"]

[ext_resource type="Script" path="res://scripts/ui/MetaMenu.gd" id="1_meta"]

[node name="MetaMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_meta")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.06, 0.05, 0.1, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="VBox" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Header" type="HBoxContainer" parent="MarginContainer/VBox"]
layout_mode = 2

[node name="BackButton" type="Button" parent="MarginContainer/VBox/Header"]
custom_minimum_size = Vector2(80, 40)
layout_mode = 2
text = "Back"

[node name="Title" type="Label" parent="MarginContainer/VBox/Header"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.8, 0.5, 1, 1)
theme_override_font_sizes/font_size = 32
text = "Unlocks"
horizontal_alignment = 1

[node name="EssenceContainer" type="HBoxContainer" parent="MarginContainer/VBox/Header"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="EssenceIcon" type="Label" parent="MarginContainer/VBox/Header/EssenceContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "âœ¨"

[node name="EssenceLabel" type="Label" parent="MarginContainer/VBox/Header/EssenceContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.5, 1, 1)
theme_override_font_sizes/font_size = 24
text = "0"

[node name="TabContainer" type="TabContainer" parent="MarginContainer/VBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="Wardens" type="ScrollContainer" parent="MarginContainer/VBox/TabContainer"]
layout_mode = 2

[node name="WardenGrid" type="GridContainer" parent="MarginContainer/VBox/TabContainer/Wardens"]
layout_mode = 2
size_flags_horizontal = 3
columns = 3

[node name="Cards" type="ScrollContainer" parent="MarginContainer/VBox/TabContainer"]
visible = false
layout_mode = 2

[node name="CardGrid" type="GridContainer" parent="MarginContainer/VBox/TabContainer/Cards"]
layout_mode = 2
size_flags_horizontal = 3
columns = 5

[node name="Artifacts" type="ScrollContainer" parent="MarginContainer/VBox/TabContainer"]
visible = false
layout_mode = 2

[node name="ArtifactGrid" type="GridContainer" parent="MarginContainer/VBox/TabContainer/Artifacts"]
layout_mode = 2
size_flags_horizontal = 3
columns = 5

[node name="Danger Levels" type="ScrollContainer" parent="MarginContainer/VBox/TabContainer"]
visible = false
layout_mode = 2

[node name="DangerGrid" type="VBoxContainer" parent="MarginContainer/VBox/TabContainer/Danger Levels"]
layout_mode = 2
size_flags_horizontal = 3

[connection signal="pressed" from="MarginContainer/VBox/Header/BackButton" to="." method="_on_back_pressed"]



















